Attributes and session management.

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -25,8 +25,28 @@ body {
     color: #ffffff;
 }
 
-.nav-container > .separator {
+.upper-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px;
+    margin-right: 10px;
+    margin-top: 7px;
+    background-color: #4d2b1e;
+}
+
+.upper-right > a {
+    margin-left: 10px;
+    color: #ffffff;
+}
+
+
+.separator {
     margin: 0 0 0 10px;
+}
+
+.userid {
+    color: #0000ff;
 }
 
 a {
