--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -19,14 +19,14 @@
     <h1>Location Setup</h1>
     <form method="post">
         <label for="location-name">Name:</label>
-        <input type="text" id="location-name" name="location_name" value="{{ current_location.name }}" required>
+        <input type="text" id="location-name" name="location_name" value="{{ current.name }}" required>
         ID: {{ current.id }}<br>
         <label for="location-description">Description:</label>
-        <textarea id="location-description" name="location_description" rows="4" cols="50">{{ current_location.description }}</textarea><br>
+        <textarea id="location-description" name="location_description" rows="4" cols="50">{{ current.description }}</textarea><br>
 
         <h2>Destinations</h2>
         <div id="destinations-container">
-            {% for destination, distance in current_location.destinations.items() %}
+            {% for destination, distance in current.destinations.items() %}
                 <div class="destination">
                     <input type="hidden" name="destination_id[]" value="{{ destination.id }}">
                     <p>{{ destination.name }}
@@ -39,7 +39,7 @@
             <div>
                 {% set outerscope = namespace(has_other_location = false) %}
                 {% for location in game.locations %}
-                    {% if location.id != current_location.id %}
+                    {% if location.id != current.id %}
                         {% set outerscope.has_other_location = true %}
                     {% endif %}
                 {% endfor %}
@@ -49,7 +49,7 @@
                         <select id="destination-select">
                             <option value="" selected>(Select location)</option>
                             {% for location in game.locations %}
-                                {% if location.id != current_location.id %}
+                                {% if location.id != current.id %}
                                 <option value="{{ location.id }}">{{ location.name }}</option>
                                 {% endif %}
                             {% endfor %}
