--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -1,21 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{ config['TITLE'] }}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            // Enable or disable the distance fields based on the selected destination
-            $('#destination-select').change(function() {
-                var selectedOption = $(this).find(':selected');
-                var isDestinationSelected = (selectedOption.val() !== '');
-                $('.distance-field').prop('disabled', !isDestinationSelected);
-            });
-        });
-    </script>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
     <h1>Location Setup</h1>
     <form method="post">
         <label for="location-name">Name:</label>
@@ -45,6 +30,16 @@
                 {% endfor %}
                 {% if outerscope.has_other_location %}
                     <!-- Select box for adding another destination -->
+                    <script>
+                        $(document).ready(function() {
+                            // Enable or disable the distance fields based on the selected destination
+                            $('#destination-select').change(function() {
+                                var selectedOption = $(this).find(':selected');
+                                var isDestinationSelected = (selectedOption.val() !== '');
+                                $('.distance-field').prop('disabled', !isDestinationSelected);
+                            });
+                        });
+                    </script>
                     <div class="select-box">
                         <select id="destination-select">
                             <option value="" selected>(Select location)</option>
@@ -99,6 +94,4 @@
             });
         });
     </script>
-</body>
-</html>
-
+{% endblock %}
