--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Item Information</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block upper_left %}
     <div class="nav-container">
         <a class="upper-left" href="{{ url_for('overview') }}">Overview</a>
         <span class="separator">|</span>
@@ -13,6 +8,9 @@
         <span class="separator">|</span>
         <a class="upper-left" href="{{ url_for('configure_item', item_id=current.id) }}">Item Setup</a>
     </div>
+{% endblock %}
+
+{% block content %}
     <table>
         <tr>
             <td style="background-color: #2a2a2a; border-bottom: 2px solid #ffffff;">
@@ -251,5 +249,4 @@
             });
         });
     </script>
-</body>
-</html>
+{% endblock %}
