--- a/app/templates/configure/item.html
+++ b/app/templates/configure/item.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{ config['TITLE'] }}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
     <h1>Item Setup</h1>
     <form method="post">
         <label for="item-name">Name:</label>
@@ -225,5 +220,4 @@
             });
         });
     </script>
-</body>
-</html>
+{% endblock %}
