--- a/app/templates/play/character.html
+++ b/app/templates/play/character.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Character Information</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block upper_left %}
     <div class="nav-container">
         <a class="upper-left" href="{{ url_for('overview') }}">Overview</a>
         <span class="separator">|</span>
@@ -13,6 +8,9 @@
         <span class="separator">|</span>
         <a class="upper-left" href="{{ url_for('configure_char', char_id=current.id) }}">Character Setup</a>
     </div>
+{% endblock %}
+
+{% block content %}
     <h1>{{ current.name }}</h1>
     {% if current.description %}
         <p>{{ current.description }}</p>
@@ -199,6 +197,4 @@
             });
         });
     </script>
-</body>
-</html>
-
+{% endblock %}
