--- a/app/templates/play/event.html
+++ b/app/templates/play/event.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Event Information</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block upper_left %}
     <div class="nav-container">
         <a class="upper-left" href="{{ url_for('overview') }}">Overview</a>
         <span class="separator">|</span>
@@ -13,6 +8,9 @@
         <span class="separator">|</span>
         <a class="upper-left" href="{{ url_for('configure_event', event_id=current.id) }}">Event Setup</a>
     </div>
+{% endblock %}
+
+{% block content %}
     <table>
         <tr>
             <td style="background-color: #2a2a2a; border-bottom: 2px solid #ffffff;">
@@ -52,5 +50,4 @@
         </tr>
         {% endif %}
     </table>
-</body>
-</html>
+{% endblock %}
